Fix mini vertical spacing

--- a/style/app.less
+++ b/style/app.less
@@ -59,6 +59,7 @@ input[type=range]{
   justify-content: space-between;
   align-items: center;
   cursor: default;
+  height: 100%;
 }
 
 #hios-mini, #hios-full {
